# wth-invisible-man

./: .cam.py.swp  cam.py
iOSWTF/iOSWTF/: AppDelegate.swift  OpenCVWrapper.h  OpenCVWrapper.mm  ViewController.swift
iOSWTF/iOSWTF.xcodeproj/: project.pbxproj
iOSWTF/iOSWTF.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOSWTF/iOSWTF.xcodeproj/project.xcworkspace/xcuserdata/Anthony.xcuserdatad/: UserInterfaceState.xcuserstate
iOSWTF/iOSWTF.xcodeproj/xcuserdata/Anthony.xcuserdatad/xcschemes/: xcschememanagement.plist
iOSWTF/iOSWTF/Base.lproj/: Main.storyboard
iOSWTF/iOSWTFTests/: iOSWTFTests.swift
iOSWTF/iOSWTFUITests/: iOSWTFUITests.swift
inC/: CMakeLists.txt  main.cpp
wthInvisMan/wthInvisMan/: main.cpp
wthInvisMan/wthInvisMan.xcodeproj/: project.pbxproj
wthInvisMan/wthInvisMan.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
wthInvisMan/wthInvisMan.xcodeproj/project.xcworkspace/xcuserdata/Anthony.xcuserdatad/: UserInterfaceState.xcuserstate
wthInvisMan/wthInvisMan.xcodeproj/project.xcworkspace/xcuserdata/agdubrov.xcuserdatad/: UserInterfaceState.xcuserstate
wthInvisMan/wthInvisMan.xcodeproj/xcuserdata/agdubrov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
wthInvisMan/wthInvisMan.xcodeproj/xcuserdata/agdubrov.xcuserdatad/xcschemes/: xcschememanagement.plist
